--- a/jenkins-deployment.yaml
+++ b/jenkins-deployment.yaml
@@ -14,6 +14,6 @@ spec:
         app: nginx
     spec:
       containers:
-      - name: nginx
+      - name: python-helloworld
         # Run this image
-        image: docker-companyname/busybox
+        image: docker-companyname/test-image
