--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,3 +4,10 @@ services:
     image: adua/test:v1
     ports:
       - "8080:8080"
+  nginx:
+  restart: always
+  build: ./nginx/
+  ports:
+    - "80:80"
+  links:
+    - web:web
