--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     ports:
       - "8080:8080"
   nginx:
-  restart: always
+  restart: "always"
   build: ./nginx/
   ports:
     - "80:80"
