--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,9 @@ services:
     ports:
       - "8080:8080"
   nginx:
-  restart: "always"
-  build: ./nginx/
-  ports:
+    restart: always
+    build: ./nginx/
+    ports:
     - "80:80"
-  links:
+    links:
     - web:web
