--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,4 +4,10 @@ services:
     image: adua/test:v1
     ports:
       - "8080:8080"
+    networks:
+      - frontend
+networks:
+  frontend:
+    name: test
+    driver: overlay
   
